<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity"
    >
<group>
    <item
        android:id="@+id/action_add_figure"
        android:title="@string/action_add"
        android:icon="@drawable/ic_playlist_add_white_48px"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_hide_comment"
        android:title="@string/action_hide_comment"
        android:icon="@drawable/ic_mode_comment_white_48px"
        app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_show_comment"
            android:title="@string/action_show_comment"
            android:icon="@drawable/ic_comment_white_48px"
            app:showAsAction="ifRoom"/>
</group>
    <item
        android:id="@+id/action_new"
        android:title="@string/action_new"
        android:icon="@drawable/ic_fiber_new_file_white_48px"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_restore"
        android:title="@string/action_reset"
        android:icon="@drawable/ic_restore_page_white_48px"
        app:showAsAction="always"/>
    <item android:id="@+id/action_syllabus"
    android:title="@string/syllabus"
    app:showAsAction="always">

    <menu>

    <group
        android:checkableBehavior="single"
        >
        <item android:id="@+id/allDances"
            android:title="@string/allDances" />
        <item
            android:id="@+id/samba"
            android:title="@string/samba" />
        <item android:id="@+id/rumba"
            android:title="@string/rumba" />
        <item android:id="@+id/chacha"
            android:title="@string/chacha" />
        <item android:id="@+id/paso"
            android:title="@string/paso" />
        <item android:id="@+id/jive"
            android:title="@string/jive" />
        <item android:id="@+id/slowWaltz"
            android:title="@string/slowWaltz" />
        <item android:id="@+id/tango"
            android:title="@string/tango" />
        <item android:id="@+id/vienneseWaltz"
            android:title="@string/vienneseWaltz" />
        <item android:id="@+id/Slowfox"
            android:title="@string/slowfox" />
        <item android:id="@+id/quickstep"
            android:title="@string/quickstep" />
    </group>
    </menu>

    </item>
    <item
        android:id="@+id/action_show_syllabus"
        android:title="@string/action_show_syllabus"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_save"
        android:title="@string/action_save"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_import"
        android:title="@string/action_import"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_export"
        android:title="@string/action_export"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_view"
        android:title="@string/action_view"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_saveaspdf"
        android:title="@string/action_saveaspdf"
        app:showAsAction="never"/>
    <item
        android:id="@+id/nav_Licence_Logiciel"
        android:title="@string/title_About"
        app:showAsAction="never"/>

</menu>
