<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nameHeader"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Name"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"/>
    <AutoCompleteTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_toRightOf="@id/nameHeader"
        android:layout_toEndOf="@id/nameHeader"
        android:layout_alignLeft="@+id/comment"
        android:layout_alignStart="@+id/comment"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/EnterFigure"
        android:layout_alignBaseline="@id/nameHeader"
        android:imeOptions="actionNext"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rhythmHeader"
        android:layout_below="@+id/nameHeader"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Rhythm"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"

       />

    <AutoCompleteTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rhythm"
        android:layout_toRightOf="@id/rhythmHeader"
        android:layout_toEndOf="@id/rhythmHeader"
        android:layout_below="@+id/nameHeader"
        android:layout_alignLeft="@+id/comment"
        android:layout_alignStart="@+id/comment"
        android:layout_marginLeft="0dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/EnterRhythm"
        android:layout_alignBaseline="@id/rhythmHeader"
        android:imeOptions="actionNext"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/commentHeader"
        android:layout_below="@+id/rhythmHeader"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Comment"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"

         />
    <AutoCompleteTextView

        android:layout_height="wrap_content"
        android:id="@+id/comment"
        android:layout_below="@+id/rhythmHeader"
        android:layout_toRightOf="@id/commentHeader"
        android:layout_toEndOf="@id/commentHeader"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"
        android:layout_width="fill_parent"
        android:hint="@string/EnterComment"
        android:layout_alignBaseline="@id/commentHeader"
        android:imeOptions="actionDone"
        />

</RelativeLayout>
