<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1"
    android:shrinkColumns="1"
    >

    <TableRow
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/greyborderbackgroundp"
        android:paddingBottom="1dp"
        android:paddingTop="1dp"
        android:layout_width="match_parent">
    </TableRow>
    </TableLayout>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false">

<TableLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1"
    android:shrinkColumns="1"
    >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:paddingBottom="1dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="1dp">


        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/NewIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/app_color"
            android:contentDescription="@string/action_add"
            android:paddingBottom="0dp"
            android:paddingEnd="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingStart="0dp"
            android:paddingTop="1dp"
            app:srcCompat="@drawable/ic_fiber_new_file_white_48px" />

        <TextView
            android:id="@+id/newHint"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="0dp"
            android:gravity="center_vertical"
            android:text="@string/UseThisIconToCreateNewChoreo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:paddingBottom="1dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="1dp">


        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/AddIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/app_color"
            android:contentDescription="@string/action_add"
            android:paddingBottom="0dp"
            android:paddingEnd="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingStart="0dp"
            android:paddingTop="1dp"
            app:srcCompat="@drawable/ic_playlist_add_white_48px" />

        <TextView
            android:id="@+id/addFigureHint"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="0dp"
            android:gravity="center_vertical"
            android:text="@string/UseThisIconToAddFigure"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </TableRow>
    <TableRow
        android:layout_marginTop="5dp"
        android:paddingBottom="1dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="1dp">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/DragIcon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/common_google_signin_btn_text_dark_default"
            android:contentDescription="@string/dragHandle"
            android:paddingBottom="0dp"
            android:paddingEnd="0dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:paddingStart="0dp"
            android:paddingTop="1dp"
            app:srcCompat="@drawable/ic_drag_handle_black_48px"
            />
        <TextView
            android:id="@+id/DragHint"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/moveFigure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="0dp"
            android:maxLines="2"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:scrollbars="horizontal"/>

    </TableRow>

    <TableRow
        android:layout_marginTop="5dp"
        android:paddingBottom="1dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="1dp">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/ResetIcon"
            android:contentDescription="@string/action_add"
            android:background="@color/app_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingBottom="1dp"
            android:paddingEnd="1dp"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:paddingStart="1dp"
            android:paddingTop="1dp"
            app:srcCompat="@drawable/ic_restore_page_white_48px"
            />
        <TextView
            android:id="@+id/ResetHint"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/UseThisIconToReset"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="0dp"
            android:maxLines="2"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:scrollbars="horizontal"/>

    </TableRow>

    <TableRow
        android:layout_marginTop="5dp"
        android:paddingBottom="1dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="1dp">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/MainMenuIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/app_color"
            android:contentDescription="@string/action_add"
            android:paddingBottom="1dp"
            android:paddingEnd="1dp"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:paddingStart="1dp"
            android:paddingTop="1dp"
            app:srcCompat="@drawable/ic_menu_white_48px"
            />
        <TextView
            android:id="@+id/MainMenuHint"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/UseThisIconToOpenMainMenu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="0dp"
            android:maxLines="2"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:scrollbars="horizontal"/>
    </TableRow>

    <TableRow
        android:layout_marginTop="5dp"
        android:paddingBottom="1dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:paddingTop="1dp"
        android:layout_width="match_parent">



        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/deleteIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/common_google_signin_btn_text_dark_default"
            android:contentDescription="@string/action_add"
            android:paddingBottom="1dp"
            android:paddingEnd="1dp"
            android:paddingLeft="1dp"
            android:paddingRight="1dp"
            android:paddingStart="1dp"
            android:paddingTop="1dp"
            app:srcCompat="@drawable/ic_delete_forever_black_48px"
            />
        <TextView
            android:id="@+id/deleteHint"
            android:text="@string/UseThisIconToDelete"
            android:textAppearance="?android:attr/textAppearanceMedium"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="0dp"
            android:maxLines="2"
            android:ellipsize="end"
            android:scrollHorizontally="true"
            android:scrollbars="horizontal"/>
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/borderbackgroundp"
        android:paddingBottom="1dp"
        android:paddingTop="1dp">
    </TableRow>

</TableLayout>
</ScrollView>
<TableLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:stretchColumns="1"
android:shrinkColumns="1"
    >

    <TableRow
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@drawable/borderbackgroundp"
        android:paddingBottom="1dp"
        android:paddingTop="1dp">
    </TableRow>
</TableLayout>
</LinearLayout>